src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwP0.25.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: P0.25"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
